kubernetes/jellyfin/base/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-service
spec:
  selector:
    app: jellyfin
  ports:
    - protocol: TCP
      port: 80 # port the node will serve on
      targetPort: 8096 # containerPort

# apiVersion: v1
# kind: Service
# metadata:
#   name: jellyfin-service
# spec:
#   selector:
#     app: jellyfin
#   ports:
#     - name: http
#       nodePort: 30000 # port the node will serve on
#       port: 8096 # containerPort
#   type: NodePort
